created new section and some styles

--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!--Кодировка-->
-		<meta charset="UTF-8">
-		<!--Тег для совместимости Интернет Эксплорер-->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<!--Создания адаптива-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!--Обнуление стилей-->
-		<!--<link rel="stylesheet" href="css/normalize.css">-->
-		<!--Главный стиль всегда ниже-->
-		<link rel="stylesheet" href="css/style.css">
-		<!--Подключение иконки-->
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-		<title>RE: Eclipse - 1.22</title>
-	</head>
+
+<head>
+	<!--Кодировка-->
+	<meta charset="UTF-8">
+	<!--Тег для совместимости Интернет Эксплорер-->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!--Создания адаптива-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--Обнуление стилей-->
+	<!--<link rel="stylesheet" href="css/normalize.css">-->
+	<!--Главный стиль всегда ниже-->
+	<link rel="stylesheet" href="css/style.css">
+	<!--Подключение иконки-->
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<title>RE: Eclipse - 1.22</title>
+</head>
+
 <body>
 	<div class="wrapper">
 		<header class="header">
@@ -36,7 +38,7 @@
 						<ul class="menu__list">
 							<li>
 								<a href="#about" class="menu__link">About</a>
-							</li> 
+							</li>
 							<li>
 								<a href="#" class="menu__link">Studio</a>
 							</li>
@@ -59,17 +61,18 @@
 						Push yourself & your designs
 					</h1>
 					<p class="first__descr">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+						et dolore magna aliqua.
 					</p>
 					<form action="#" method="get" class="first__form">
 						<input type="text" name="style" class="first__field name-field" placeholder="Design Style">
 						<input type="email" name="email" id="" class="first__field email-field" placeholder="Email">
 						<button type="submit" class="first__btn"><span class="btn-text">Send</span></button>
 					</form>
-					
+
 				</div>
 			</section>
-			<section class="about"  id="about">
+			<section class="about" id="about">
 				<div class="about-top">
 					<div class="about-top__container container">
 						<div class="about-top__arrow-top arrows">
@@ -79,7 +82,8 @@
 							Latest Design Style
 						</h2>
 						<p class="about-top__descr">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nobis molestiae amet optio nesciunt pariatur.
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nobis molestiae amet optio nesciunt
+							pariatur.
 						</p>
 						<div class="about-top__phone"></div>
 						<div class="about-top__arrow-bottom arrows">
@@ -88,11 +92,81 @@
 					</div>
 				</div>
 				<div class="about-bottom">
-
+					<div class="container about-bottom__body">
+						<h2 class="about-bottom__title">
+							Feauteres Of App
+						</h2>
+						<p class="about-bottom__descr">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum fugit voluptatum, eveniet aperiam
+							doloribus esse!
+						</p>
+						<ul class="about-bottom__list">
+							<li class="about-bottom__item about-item">
+								<div class="about-item__image">
+									<img src="img/about/01.svg" alt="">
+								</div>
+								<h3 class="about-item__title">
+									Lorem ipsum dolor sit
+								</h3>
+								<p class="about-item__descr">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptatem repudiandae
+									dolores magni ea a modi dolore minima nostrum, suscipit voluptatum iste libero aut excepturi,
+									fugiat voluptas! Rem, laborum totam.
+								</p>
+							</li>
+							<li class="about-bottom__item about-item">
+								<div class="about-item__image">
+									<img src="img/about/02.svg" alt="">
+								</div>
+								<h3 class="about-item__title">
+									Lorem ipsum dolor sit
+								</h3>
+								<p class="about-item__descr">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptatem repudiandae
+									dolores magni ea a modi dolore minima nostrum, suscipit voluptatum iste libero aut excepturi,
+									fugiat voluptas! Rem, laborum totam.
+								</p>
+							</li>
+							<li class="about-bottom__item about-item">
+								<div class="about-item__image">
+									<img src="img/about/03.svg" alt="">
+								</div>
+								<h3 class="about-item__title">
+									Lorem ipsum dolor sit
+								</h3>
+								<p class="about-item__descr">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptatem repudiandae
+									dolores magni ea a modi dolore minima nostrum, suscipit voluptatum iste libero aut excepturi,
+									fugiat voluptas! Rem, laborum totam.
+								</p>
+							</li>
+							<li class="about-bottom__item about-item">
+								<div class="about-item__image">
+									<img src="img/about/04.svg" alt="">
+								</div>
+								<h3 class="about-item__title">
+									Lorem ipsum dolor sit
+								</h3>
+								<p class="about-item__descr">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptatem repudiandae
+									dolores magni ea a modi dolore minima nostrum, suscipit voluptatum iste libero aut excepturi,
+									fugiat voluptas! Rem, laborum totam.
+								</p>
+							</li>
+						</ul>
+						<div class="about-bottom__arrow arrows">
+							<a href="#" class="arrow__link"></a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="design">
+				<div class="container design__body">
 				</div>
 			</section>
 		</main>
 	</div>
 	<script src="js/script.js"></script>
 </body>
+
 </html>
