created new section

--- a/index.html
+++ b/index.html
@@ -162,6 +162,61 @@
 			</section>
 			<section class="design">
 				<div class="container design__body">
+					<h2 class="design__title">
+						Our Design Guidelines
+					</h2>
+					<p class="design__descr">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+						et dolore magna aliqua.
+					</p>
+					<div class="design__gallery gallery">
+						<ul class="gallery__links">
+							<li class="gallery__item-link">
+								<a href="#" class="gallery__link">Development</a>
+							</li>
+							<li class="gallery__item-link">
+								<a href="#" class="gallery__link">Design</a>
+							</li>
+							<li class="gallery__item-link">
+								<a href="#" class="gallery__link">Business</a>
+							</li>
+							<li class="gallery__item-link">
+								<a href="#" class="gallery__link">Arts</a>
+							</li>
+						</ul>
+						<ul class="gallery__column">
+							<li class="gallery__items">
+								<a href="#" class="gallery-item__link">
+									<div class="gallery__photo">
+										<img src="img/features-image.png" alt="">
+									</div>
+									<a href="#" class="gallery__title">
+										Design Listing One
+									</a>
+								</a>
+							</li>
+							<li class="gallery__items">
+								<a href="#" class="gallery-item__link">
+									<div class="gallery__photo">
+										<img src="img/features-image.png" alt="">
+									</div>
+									<a href="#" class="gallery__title">
+										Design Listing One
+									</a>
+								</a>
+							</li>
+							<li class="gallery__items">
+								<a href="#" class="gallery-item__link">
+									<div class="gallery__photo">
+										<img src="img/features-image.png" alt="">
+									</div>
+									<a href="#" class="gallery__title">
+										Design Listing One
+									</a>
+								</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</section>
 		</main>
