--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li>
-								<a href="#about" class="menu__link">About</a>
+								<a href="#" class="menu__link">About</a>
 							</li>
 							<li>
 								<a href="#" class="menu__link">Studio</a>
@@ -46,7 +46,7 @@
 								<a href="#" class="menu__link">Pricing</a>
 							</li>
 							<li>
-								<ahref="#" class="menu__link">Blog</a>
+								<a href="#" class="menu__link">Blog</a>
 							</li>
 						</ul>
 						<button class="menu__join-btn">Join</button>
@@ -220,6 +220,76 @@
 				</div>
 			</section>
 		</main>
+		<footer class="footer">
+			<section class="footer__top notebook">
+				<div class="container">
+					<div class="notebook__body">
+						<div class="notebook__logo">
+							<img src="img/header/logo.svg" alt="logo">
+						</div>
+						<div class="notebook__text">
+							<h2 class="notebook__title">
+								Push yourself & your designs
+							</h2>
+							<p class="notebook__descr">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur
+								adipisicing elit. Optio, culpa.
+							</p>
+							<div class="notebook__image">
+								<img src="img/footer/notebook.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="footer__bottom">
+				<div class="container">
+					<div class="footer-bottom__body">
+						<div class="footer-bottom__social">
+							<a href="#" class="footer-bottom__link footer-bottom__link--tw">Tweet</a>
+							<a href="#" class="footer-bottom__link footer-bottom__link--fb">Share</a>
+						</div>
+						<div class="footer-bottom__content">
+							<nav class="footer-bottom__nav">
+								<ul class="footer-bottom__list">
+									<li>
+										<a href="#">About Us</a>
+									</li>
+									<li>
+										<a href="#">Support</a>
+									</li>
+									<li>
+										<a href="#">Why Buy</a>
+									</li>
+									<li>
+										<a href="#">Affiliates</a>
+									</li>
+								</ul>
+								<ul class="footer-bottom__list">
+									<li>
+										<a href="#">Contact Us</a>
+									</li>
+									<li>
+										<a href="#">Returns</a>
+									</li>
+								</ul>
+							</nav>
+
+							<div class="footer-bottom__copy">
+								<small>Made in Melbourne By BlazRobar.com @BlazRobar</small>
+								<small>Created by <span>sim-max</span></small>
+								<small>Copyright © 2022, Cool stuff here</small>
+							</div>
+						</div>
+						<div class="footer-bottom__bottom">
+							<p class="footer-bottom__descr">
+								Lorem ipsum dolor sit amet, consectetur adipisicing
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		</footer>
 	</div>
 	<script src="js/script.js"></script>
 </body>
